manifests/cfk/basic/confluent-utility-StatefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: confluent-utility
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: confluent-utility # has to match .spec.template.metadata.labels
  serviceName: "confluent-utility"
  replicas: 1 # by default is 1
  # minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: confluent-utility # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: utility
          image: justinrlee/confluent-utility:latest
          volumeMounts:
            - name: client-tls
              readOnly: true
              mountPath: /root/certs
            - name: client-tls
              readOnly: true
              mountPath: /mnt/certs
            - name: utility-config
              readOnly: true
              mountPath: /root/config
      volumes:
        - name: client-tls
          secret:
            secretName: tls-client-full
        - name: utility-config
          configMap:
            name: utility-config
