manifests/cfk/basic/kafka-ingress.yaml
--- # Ingress for kafka Controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - "*.127-0-0-1.nip.io"
  ingressClassName: nginx
  rules:
  - host: kafka.127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Cannot be headless
            name: kafka-bootstrap
            port:
              number: 9092
  - host: kafka-0.127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Cannot be headless
            name: kafka-0-internal
            port:
              number: 9092
  - host: kafka-1.127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Cannot be headless
            name: kafka-1-internal
            port:
              number: 9092
  - host: kafka-2.127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Cannot be headless
            name: kafka-2-internal
            port:
              number: 9092
